# IF767-ipmt

./: CMakeLists.txt  README.md
src/: dc3.cpp  dc3.h  def.h  lz77.hpp  lz78.cpp  lz78.h  main.cpp  serializer.cpp  serializer.h  string_view.cpp  string_view.h  suffix_array.cpp  suffix_array.h  watch.h
